
Dmitry Baikov
Steven Chamberlain
Thom Johansen
Thibault LeMeur
Pieter Palmers
Tom Szilagyi
Andrzej Szombierski 
Kjetil S.Matheussen
Pieter Palmers
Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano
Romain Moret
Florian Faber
Michael Voigt
Torben Hohn  

---------------------------
  Jackdmp changes log
---------------------------

2009-03-12 Stephane Letz  <letz@grame.fr>

        * Try automatic adaptative mode in adapters.

2009-03-11 Stephane Letz  <letz@grame.fr>

        * Client incorrect re-naming fixed : now done at socket level also.

2009-03-10 Stephane Letz  <letz@grame.fr>

	* Add -g (ring-buffer) parameter to netadapter.
	* Automatic adaptative ringbuffer size mode when -g = 0.

2009-03-09 Stephane Letz  <letz@grame.fr>

	* Use Torben Hohn PI controler code for adapters (in progress).

2009-03-05 Stephane Letz  <letz@grame.fr>

	* Support for BIG_ENDIAN machines in NetJack2 for transport data.
	* Add auto_connect parameter in netmanager and netadapter.

2009-03-03 Stephane Letz  <letz@grame.fr>

	* More robust profiling tools when clients come and go.

2009-03-01 Stephane Letz  <letz@grame.fr>

	* Raise default port number to 1024.

2009-02-27 Stephane Letz  <letz@grame.fr>

	* Improve generated gnuplot files for adapting code.

2009-02-25 Stephane Letz  <letz@grame.fr>

	* Major cleanup in adapter code.

2009-02-25 Stephane Letz  <letz@grame.fr>

	* Fix JackNetDriver::Close method.
        * For audio device reservation, add card_to_num function.
        * Fix buffer size and sample rate handling in JackAlsaAdapter.
        * Add control for adapter ringbuffer size.
	* Fix JackAlsaAdapter.h for 64 bits compilation.

2009-02-23 Stephane Letz  <letz@grame.fr>

	* Another fix in systemdeps.h and types.h: jack_time_t now uniquely defined in types.h.
	* Move generic code and data in JackNetInterface and JackNetMasterInterface classes.
        * First version of D-Bus based audio device reservation.
