@@ -26,6 +26,10 @@ Torben Hohn
 
 2009-03-12 Stephane Letz  <letz@grame.fr>
 
+        * Virtualize and allow overriding of thread creation function, to allow Wine support (from JACK1).
+
+2009-03-12 Stephane Letz  <letz@grame.fr>
+
         * Try automatic adaptative mode in adapters.
 
 2009-03-11 Stephane Letz  <letz@grame.fr>
